readme - add indications of --add-exports